2005-05-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* .version: changed to version 2.5.1; back to bleeding edge development

2005-05-11 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx doc/cdbfileformat.lyx doc/test_suite_spec.lyx:
	  generate PDF version 1.3 documents

2005-05-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* .version: changed to version 2.5.0

2005-04-27 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: updated weblinks, index and smaller updates

2005-04-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: changed version 2.5.0, documented --std-c89,
	--std-sdcc89, --std-c99, --std-sdcc99, and the corresponding #pragmas, as
	well as many smaller updates.
	* .version: changed to version 2.5.0-pre1

2005-04-26 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/SDCCmain.c (setIncludePath): added port->target to SDCC_INCLUDE_NAME

2005-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1185672.c: added
	* src/mcs51/gen.c (aopGetUsesAcc, genCpl, genAnd, genOr, genXor): fixed
	  bug 1185672
	* src/mcs51/gen.c (genCall): added comments, made it look safer
	* src/mcs51/gen.c (genEndFunction): simplified

2005-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (serialRegAssign): fixed bug 1189609

2005-04-14 Borut Razem <borut.razem AT siol.net>

	* fixed bug 1045046 - SIGSEGV with really simple code?:
	  src/pic/pcode.c (pCodeInitRegisters)- pseudo stack size increased to 16
	  src/pic/ralloc.c (typeRegWithIdx) - error message on pseudo stack overflow

2005-04-14 Borut Razem <borut.razem AT siol.net>

	* src/pic16/gen.c (genInline), src/pic16/main.c (_process_pragma),
	  src/pic16/device.h: temporarily disabled experimental #inline pragma
	  for 2.5.0 release

2005-04-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/z80/stdio.h,
	* device/include/z80/string.h: removed these highly incomplete files so